# Homotopio-suite

./: .gitignore  COMMUNITY_LIBRARY.md  Cargo.toml  DEVELOPMENT.md  DSL.md  Dockerfile.dev  Makefile.toml  README.md  TUTORIAL.md  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  community-library.yml  devskim.yml  nix.yml  pages.yml
community-library/: README.md
homotopy-cli/: Cargo.toml
homotopy-common/: Cargo.toml
homotopy-common/src/: dense.rs  idx.rs  iter.rs  tree.rs
homotopy-core/: Cargo.toml
homotopy-core/src/: collapse.rs  lib.rs
homotopy-dsl/: Cargo.toml
homotopy-dsl/src/: lib.rs  presets.rs
homotopy-gl/src/: buffer.rs  texture.rs
homotopy-graphics/: Cargo.toml
homotopy-graphics/src/: manim.rs  style.rs
homotopy-model/: Cargo.toml
homotopy-model/src/proof/: signature.rs
homotopy-web/: Cargo.toml
homotopy-web/src/: app.rs  model.rs  panic.rs
homotopy-web/src/app/: community_library.rs  diagram_gl.rs  info.rs  library.rs  presets.rs  project.rs  sidebar.rs  source.rs  workbench.rs  workspace.rs
homotopy-web/src/app/diagram_gl/renderer/: scene.rs
homotopy-web/src/app/sidebar/: drawers.rs
homotopy-web/src/app/signature/: item.rs
homotopy-web/src/components/: icon.rs
homotopy-web/static/: boot.js  editor.js  index.html  styles.css
